--- a/Twordle-Kabeer/index.html
+++ b/Twordle-Kabeer/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="main.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-    <link rel="icon" href="icon.png" type="image/x-icon">
+    <link rel="icon" href="assets/icon.png" type="image/x-icon">
 </head>
 <body>
     <div class="container">
@@ -21,7 +21,7 @@
             <div class="game-title">TWORDLE</div>
             <div class="header-icons">
                 <button id="toggle-music" class="stylish-btn">
-                    <img src="unmute.svg" alt="Toggle Music" class="icon" style="width: 20px; height: 20px;">
+                    <img src="assets/mute.svg" alt="Toggle Music" class="icon" style="width: 20px; height: 20px;">
                 </button>
                 <!-- <button class="icon-btn" aria-label="Settings">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
@@ -32,7 +32,7 @@
             </div>
         </div>
         <hr class="header-divider">
-        <audio id="bg-music" src="audio.mp3" loop hidden></audio>
+        <audio id="bg-music" src="assets/audio.mp3" loop hidden></audio>
         <div id="game-header">
             <span id="guess-counter"></span>
             <div class="game-controls">
